syntax = "proto3";

package client.events;
option java_multiple_files = true;

message BookingEvent {
  string id = 1;
  string clientId = 2;
  string tableId = 3;
  string bookDate = 4;
  string registerDate = 5;
}